<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.sudokuapp.vm.PlaySudokuViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PlaySudokuActivity">

        <com.example.sudokuapp.view.SudokuBoard
            android:id="@+id/sudoku_board_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <GridLayout
            android:id="@+id/number_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:columnCount="4"
            android:rowCount="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(1)}"
                android:text="@string/number_button_one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(2)}"
                android:text="@string/number_button_two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(3)}"
                android:text="@string/number_button_three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_cell_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(0)}"
                android:text="@string/clear_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(4)}"
                android:text="@string/number_button_four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(5)}"
                android:text="@string/number_button_five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(6)}"
                android:text="@string/number_button_six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(7)}"
                android:text="@string/number_button_seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(8)}"
                android:text="@string/number_button_eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:onClick="@{() -> viewModel.updateSelectedCellValue(9)}"
                android:text="@string/number_button_nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/check_button"
                style="@style/NumberKeypadStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="3"
                android:text="@string/check_button_text" />

        </GridLayout>

    </RelativeLayout>
</layout>