<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.sudokuapp.vm.MenuViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.MenuActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sudoku_game_title"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="@dimen/menu_sudoku_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudoku_game_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/continue_button"
            style="@style/MenuTextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isSavedBoard}"
            android:text="@string/continue_text_button"
            android:visibility="@{viewModel.isSavedBoard ? View.VISIBLE : View.GONE}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/new_game_button"
            style="@style/MenuTextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_new_game_text_button" />

    </LinearLayout>
</layout>